--- a/groups.yaml
+++ b/groups.yaml
@@ -8,6 +8,7 @@ lights:
     - light.reading_light
     - light.bedside_light
     - light.kitchen_light
+    - light.office2_level
 
 travel:
   name: Travel
