Switch to Traefik for SSL certificate
Remove all manual certificate management.  SSL is handled by Traefik now which simplifies the process.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,8 +13,11 @@ scene: !include scenes.yaml
 
 http:
   #base_url: !secret http_base_url
-  ssl_certificate: !secret http_ssl_certificate
-  ssl_key: !secret http_ssl_key
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - 192.168.29.10
+    - 192.168.29.100
+    - 172.19.0.2
 
 duckdns:
   domain: veleek
@@ -50,9 +53,6 @@ google_assistant:
     # The kitchen lights are exposed as a light, not as a switch so ignore this.
     switch.kitchen_switch:
       expose: false
-
-shell_command:
-  renew_ssl: sudo /usr/bin/certbot renew --no-self-upgrade --webroot -w /var/certbot/public_html --preferred-challenges http-01
 
 light:
   - platform: template
