--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,8 @@
 version: '3.7'
 services:
-  zwavejs2mqtt:
-    container_name: zwavejs2mqtt
-    image: zwavejs/zwavejs2mqtt:latest
+  zwave:
+    container_name: zwave
+    image: zwavejs/zwavejs2mqtt:stable
     restart: always
     tty: true
     stop_signal: SIGINT
@@ -10,7 +10,7 @@ services:
       - SESSION_SECRET=super-secret-session-secret
       # Uncomment if you want logs time and dates to match your timezone instead of UTC
       # Available at https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-      - TZ=America/New_York
+      - TZ=${TZ}
     networks:
       - zwave
     devices:
@@ -22,17 +22,32 @@ services:
       - '3000:3000' # port for Z-Wave JS websocket server
   homeassistant:
     container_name: homeassistant
-    image: "ghcr.io/home-assistant/raspberrypi3-homeassistant:stable"
+    image: "ghcr.io/home-assistant/raspberrypi3-homeassistant:old"
     environment:
-      - TZ=America/America/New_York
+      - TZ=${TZ}
     volumes:
       - hass-config:/config
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     privileged: true
     network_mode: host
+
+  netdaemon:
+    image: netdaemon/netdaemon3
+    container_name: netdaemon
+    restart: always
+    environment:
+      - HomeAssistant__Host=hass
+      - HomeAssistant__Token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiI2MWMwY2ViYWQzMjA0NWEzODcxZTAzMTkzYzE3Nzk0ZCIsImlhdCI6MTY1NTE4OTQ5MSwiZXhwIjoxOTcwNTQ5NDkxfQ.mZ7u7CMykxa2IaaNBQJLFXRpnthJKFMTQ2Q-Yn-0ncw
+      - NetDaemon__ApplicationAssembly=NetDaemonApps.dll
+      - Logging__LogLevel__Default=Information  # use Information/Debug/Trace/Warning/Error
+      - TZ=${TZ}
+    volumes:
+      - netdaemon-config:/data
+
 networks:
   zwave:
+
 volumes:
   zwave-config:
     name: zwave-config
@@ -48,3 +63,10 @@ volumes:
       type: 'none'
       o: 'bind'
       device: '/home/pi/hassconfig'
+  netdaemon-config:
+    name: netdaemon-config
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/pi/hassconfig/netdaemon'
